After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 655092 - compilation error with --with-database configure switch
compilation error with --with-database configure switch
Status: RESOLVED FIXED
Product: planner
Classification: Other
Component: General
0.14.x
Other Linux
: Normal normal
: ---
Assigned To: Alexandre Franke
planner-maint
Depends on:
Blocks:
 
 
Reported: 2011-07-22 03:05 UTC by Maxim Zakharov
Modified: 2011-07-25 21:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
path to solve compilation errors when --with-database configure switch is used (447 bytes, patch)
2011-07-22 03:05 UTC, Maxim Zakharov
none Details | Review
fix compilation error with --with-database switch in src/planner-sql-plugin.c (426 bytes, patch)
2011-07-22 03:47 UTC, Maxim Zakharov
none Details | Review
git format-patch -1 (1.20 KB, patch)
2011-07-24 23:16 UTC, Maxim Zakharov
committed Details | Review

Description Maxim Zakharov 2011-07-22 03:05:53 UTC
Created attachment 192434 [details] [review]
path to solve compilation errors when --with-database configure switch is used

I got the following compilation errors when tried to build 0.14.5 version on Ubuntu with --with-database configure switch:

mrp-sql.c: In function ‘sql_write_project’:
mrp-sql.c:2417: error: format not a string literal and no format arguments
mrp-sql.c:2424: error: format not a string literal and no format arguments
mrp-sql.c:2447: error: format not a string literal and no format arguments
mrp-sql.c:2514: error: format not a string literal and no format arguments
mrp-sql.c: In function ‘mrp_sql_save_project’:
mrp-sql.c:3729: error: format not a string literal and no format arguments
make[2]: *** [libstorage_sql_la-mrp-sql.lo] Error 1

The attached patch solves the issue.
Comment 1 Maxim Zakharov 2011-07-22 03:47:55 UTC
Created attachment 192435 [details] [review]
fix compilation error with --with-database switch in src/planner-sql-plugin.c
Comment 2 Maxim Zakharov 2011-07-22 03:49:50 UTC
Similar error in src/planner-sql-plugin.c

cc1: warnings being treated as errors
planner-sql-plugin.c: In function ‘show_error_dialog’:
planner-sql-plugin.c:320: error: format not a string literal and no format arguments
make[2]: *** [libsql_plugin_la-planner-sql-plugin.lo] Error 1


A patch attached to solve the problem.
Comment 3 Alexandre Franke 2011-07-22 14:40:05 UTC
Can you use git format-patch to generate the patches, so that I have the right metadata?
Comment 4 Maxim Zakharov 2011-07-24 23:16:26 UTC
Created attachment 192589 [details] [review]
git format-patch -1

Here you are the patch generated by the command
git format-patch -1
Comment 5 Alexandre Franke 2011-07-25 17:20:02 UTC
Ok, I'll push this ASAP.
Comment 6 Alexandre Franke 2011-07-25 21:37:47 UTC
Thanks, pushed to master.