fixes for compilation errors with --with-database

https://bugzilla.gnome.org/show_bug.cgi?id=655092