src/planner-sql-plugin.c
@@ -317,7 +317,7 @@ show_error_dialog (PlannerPlugin *plugin,
 					 GTK_DIALOG_DESTROY_WITH_PARENT,
 					 GTK_MESSAGE_ERROR,
 					 GTK_BUTTONS_CLOSE,
-					 str);
+					 "%s", str);
 
 	response = gtk_dialog_run (GTK_DIALOG (dialog));
 	gtk_widget_destroy (dialog);
